# cradle.log

./: Cargo.toml  README.md
migrations/: 20260615170537_init.sql
src/: main.rs  prompt.txt
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  Layout.tsx  main.tsx  style.css
web/src/components/: Logo.tsx  Wave.tsx
web/src/pages/: Landing.tsx  Start.css  Start.tsx
